--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -75,3 +75,11 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  on-fail-job:
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Provide Message
+        run: echo "FAILURE !!!"
+      - name: Provide Logs
+        run: echo "${{ github }}"
