Add Conditional Job - On-failure FIXED02

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -83,4 +83,4 @@ jobs:
       - name: Provide Message
         run: echo "FAILURE !!!"
       - name: Provide Logs
-        run: echo "${{ github }}"
+        run: echo "${{ toJSON(github) }}"
